// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/starts/Button renders a button 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #1C104E;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  class="c0"
  type="primary"
>
  Button
</button>
`;

exports[`components/starts/Button renders a secondary button 1`] = `
.c0 {
  color: #1C104E;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #FFFFFF;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  class="c0"
  type="secondary"
>
  Button
</button>
`;

exports[`components/starts/Button renders an external link 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #1C104E;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  class="c0"
  href="https://google.com"
  rel="noreferrer noopener"
  target="_blank"
  type="primary"
>
  Button
</a>
`;

exports[`components/starts/Button renders an interal link 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #1C104E;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  class="c0"
  href="/about"
  type="primary"
>
  Button
</a>
`;
